@@ -168,6 +168,7 @@ register-python-argcomplete phobos > %{buildroot}/%{_sysconfdir}/bash_completion
 %{_sbindir}/phobos_tape_library_mtx_test.bash
 %{_sbindir}/phobos_tlc
 %{_unitdir}/phobos_tlc.service
+%{_sbindir}/phobos_hsm_sync_dir
 %{_mandir}/man1/*
 
 %config(noreplace) %{_sysconfdir}/phobos.conf
