@@ -1,4 +1,4 @@
 AM_CFLAGS= $(CC_OPT)
 
 SUBDIRS=include core module-loader ldm ldm-modules daemon \
-        io io-modules layout store layout-modules admin lrs cli tlc
+        io io-modules layout store layout-modules admin lrs cli tlc hsm
